--- a/SGE Sistemas Gestion Empresarial/JSON/lib/my-pokemon-api/pom.xml
+++ b/SGE Sistemas Gestion Empresarial/JSON/lib/my-pokemon-api/pom.xml
@@ -31,6 +31,11 @@
         <version>4.4.0</version> 
         <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.8</version> <!-- Use the latest version -->
+  </dependency>  
 
   </dependencies>
 
