Jframe de tesla, calculeitor2000 y comienzo de Gelateria Toni

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /DI Desarrollo Interfaces/ProyectoVehiculos/target/
 .DS_Store
+/di/proyectoTesla/teslaDB/nbproject/private/
+/di/proyectoTesla/teslaDB/build/
