--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,19 @@
   "C_Cpp.errorSquiggles": "disabled",
   "java.home": "/Library/Java/JavaVirtualMachines/jdk-16.0.2.jdk/Contents/Home",
   "cmake.configureOnOpen": true,
-  "java.project.sourcePaths": [
-    "psp/ut02/sinchonized"
-  ],
+  "java.project.sourcePaths": ["psp/ut02/sinchonized"],
   "files.associations": {
     "*.java": "java",
     "6.C": "cpp"
-  }
+  },
 
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/node_modules": true,
+    ".*": true
+  }
 }
