EJEMPLO CLASE DAVID DB USERS

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "MainLifts",
+      "request": "launch",
+      "mainClass": "MainLifts",
+      "projectName": ""
+    },
+    {
+      "type": "java",
       "name": "Practica0",
       "request": "launch",
       "mainClass": "Practica0",
