--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "java.configuration.updateBuildConfiguration": "interactive",
   "C_Cpp.errorSquiggles": "disabled",
-  "java.home": "/Library/Java/JavaVirtualMachines/jdk-16.0.2.jdk/Contents/Home",
+  "java.jdt.ls.java.home": "/Library/Java/JavaVirtualMachines/jdk-17.jdk/Contents/Home",
   "cmake.configureOnOpen": true,
   "java.project.sourcePaths": ["psp/ut02/sinchonized", "ad/2doTrimestre"],
   "files.associations": {
@@ -17,5 +17,6 @@
     "**/.DS_Store": true,
     "**/node_modules": true,
     ".*": true
-  }
+  },
+  "java.compile.nullAnalysis.mode": "automatic"
 }
