--- a/psp/.vscode/settings.json
+++ b/psp/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
-    "java.project.sourcePaths": [
-        "ut02/sinchonized",
-        "ut02/elefante",
-        "ut02/carrera",
-        "EntrenamientoJava/Date",
-        "EntrenamientoJava"
-    ]
+  "java.project.sourcePaths": [
+    "ut02/sinchonized",
+    "ut02/elefante",
+    "ut02/carrera",
+    "EntrenamientoJava/Date",
+    "EntrenamientoJava",
+    "ut04/servidor_http"
+  ]
 }
