--- a/di/demoapi/pom.xml
+++ b/di/demoapi/pom.xml
@@ -12,11 +12,17 @@
 	<artifactId>demoapi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demoapi</name>
-	<description>Eloys Demo project for Spring Boot</description>
+	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
