--- a/di/demoapi/src/main/resources/application.properties
+++ b/di/demoapi/src/main/resources/application.properties
@@ -4,5 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
 
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
